Fixed Overflow of Menu in Cart through Footer

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 5vh 5vw;
-    height: 70vh;
+    min-height: 70vh;
     justify-content: center;
     place-items: center;
 }
